src/test/ui/type/type-alias-bounds-err.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/type-alias-bounds-err.rs:16:1
   |
LL | type SVec<T: Send+Send> = Vec<T>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be sent between threads safely
   |
   = help: the trait `std::marker::Send` is not implemented for `T`
   = help: consider adding a `where T: std::marker::Send` bound

error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/type-alias-bounds-err.rs:18:1
   |
LL | type S2Vec<T> where T: Send = Vec<T>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be sent between threads safely
   |
   = help: the trait `std::marker::Send` is not implemented for `T`
   = help: consider adding a `where T: std::marker::Send` bound

error[E0277]: the trait bound `U: Bound` is not satisfied
  --> $DIR/type-alias-bounds-err.rs:23:1
   |
LL | type T6<U: Bound> = ::std::vec::Vec<U>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bound` is not implemented for `U`
   |
   = help: consider adding a `where U: Bound` bound

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
